formato nuevo artículo

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>hello rails</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Hola, Mundo!</h1>
+<p>Utilidades y Herramientas; Maestría en software Libre</p>
