hasta el punto 5.10

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Hola, Mundo!</h1>
 <p>Utilidades y Herramientas; Maestría en software Libre</p>
+<%= link_to 'My Blog', controller: 'articles' %>
+<%= link_to 'New article', new_article_path %>
+<%= form_for :article, url: articles_path do |f| %>
+  ...
+<% end %>
+ 
+<%= link_to 'Back', articles_path %>
